# aoc2020

./: Cargo.toml
src/: adapter_array.rs  binary_boarding.rs  customs.rs  docking_data.rs  encoding_errors.rs  expense_report.rs  handheld.rs  handy_haversack.rs  lib.rs  passport_processing.rs  password_validator.rs  rain_risk.rs  seating_system.rs  shuttle_schedule.rs  toboggan_trajectory.rs
