[package]
name = "aoc2020"
version = "0.1.0"
authors = ["yngvi <blitzkopf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "*"
regex = "1"
lazy_static = "1.4.0"
array_tool = "1.0.3"
clap = ">=2.21"
vector2d = "*"